// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> do not render the sourceCode url and author if not defined 1`] = `
.c0 {
  margin-bottom: 50px;
}

.c0 nav {
  margin-bottom: 50px;
}

.c1 {
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c2 {
  text-decoration: none;
  box-shadow: none;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid;
  outline: none;
}

@media (min-width: 760px) {
  .c0 nav {
    margin-bottom: 0;
  }
}

<body>
  <div>
    <footer
      class="c0"
    >
      <p
        class="c1"
      >
        CC-BY 
        2024
         
        <span />
        , built with 
        <a
          class="c2"
          href="https://gatsbyjs.org"
          rel="noopener"
          target="_blank"
        >
          gatsby
        </a>
         •
         
      </p>
    </footer>
  </div>
</body>
`;

exports[`<Footer /> renders properly 1`] = `
.c0 {
  margin-bottom: 50px;
}

.c0 nav {
  margin-bottom: 50px;
}

.c1 {
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c2 {
  text-decoration: none;
  box-shadow: none;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid;
  outline: none;
}

@media (min-width: 760px) {
  .c0 nav {
    margin-bottom: 0;
  }
}

<body>
  <div>
    <footer
      class="c0"
    >
      <p
        class="c1"
      >
        CC-BY 
        2024
         
        <span>
          diegocoxta
        </span>
        , built with 
        <a
          class="c2"
          href="https://gatsbyjs.org"
          rel="noopener"
          target="_blank"
        >
          gatsby
        </a>
         •
         
      </p>
    </footer>
  </div>
</body>
`;

exports[`<Footer /> renders the sourceCode url if defined 1`] = `
.c0 {
  margin-bottom: 50px;
}

.c0 nav {
  margin-bottom: 50px;
}

.c1 {
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c2 {
  text-decoration: none;
  box-shadow: none;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid;
  outline: none;
}

@media (min-width: 760px) {
  .c0 nav {
    margin-bottom: 0;
  }
}

<body>
  <div>
    <footer
      class="c0"
    >
      <p
        class="c1"
      >
        CC-BY 
        2024
         
        <span>
          @diegocoxta
        </span>
        , built with 
        <a
          class="c2"
          href="https://gatsbyjs.org"
          rel="noopener"
          target="_blank"
        >
          gatsby
        </a>
         •
         
        <a
          class="c2"
          data-testid="footer-source-code"
          href="https://github.com/diegocoxta/diegocosta.me"
          rel="noopener"
          target="_blank"
        >
          source code
        </a>
      </p>
    </footer>
  </div>
</body>
`;
